feat: add back to menu button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </div>
       </div>
       <div id="gameplayPanel">
+        <div id="actionPanel">
+        <button id="backToMenuBtn">Back to Menu</button>
+        </div>
         <div id="display"></div>
         <div id="buttonsContainer">
           <button id="rock" class="b">Rock</button>
