feat: add restart game button

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       </div>
       <div id="gameplayPanel">
         <div id="actionPanel">
-        <button id="backToMenuBtn">Back to Menu</button>
+        <button id="backToMenuBtn" class="action-btn">Back to Menu</button>
+        <button id="restartGameBtn" class="action-btn">Restart game</button>
         </div>
         <div id="display"></div>
         <div id="buttonsContainer">
-          <button id="rock" class="b">Rock</button>
-          <button id="paper" class="b">Paper</button>
-          <button id="scissors" class="b">Scissors</button>
+          <button id="rock" class="choice-btn">Rock</button>
+          <button id="paper" class="choice-btn">Paper</button>
+          <button id="scissors" class="choice-btn">Scissors</button>
         </div>
       </div>
       <div id="computerPanel">
