--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
@@ -23,9 +24,9 @@
         </div>
         <div id="display"></div>
         <div id="buttonsContainer">
-          <button id="rock" class="choice-btn">Rock</button>
-          <button id="paper" class="choice-btn">Paper</button>
-          <button id="scissors" class="choice-btn">Scissors</button>
+          <button id="rock" class="choice-btn" title="Rock">🪨</button>
+          <button id="paper" class="choice-btn" title="Paper">📄</button>
+          <button id="scissors" class="choice-btn" title="Scissors">✂️</button>
         </div>
       </div>
       <div id="computerPanel">
