feat: add icons to choice buttons

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <div id="display"></div>
         <div id="buttonsContainer">
-          <button id="rock" class="choice-btn" title="Rock">🪨</button>
-          <button id="paper" class="choice-btn" title="Paper">📄</button>
-          <button id="scissors" class="choice-btn" title="Scissors">✂️</button>
+         <button class="choice-btn" id="rock" title="Rock"><i class="fa-regular fa-hand-back-fist"></i></button>
+         <button class="choice-btn" id="paper" title="Paper"><i class="fa-regular fa-hand"></i></button>
+         <button class="choice-btn" id="scissors" title="Scissors"><i class="fa-regular fa-hand-scissors"></i></button>
         </div>
       </div>
       <div id="computerPanel">
