--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link rel="icon" href="icons/hand_scissors.ico" type="image/x-icon"/>
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
